@@ -7,15 +7,16 @@ $PMF_LDAP['ldap_password'] = '';
 $PMF_LDAP['ldap_base'] = '';
 
 // More LDAP servers
-// You can as much as you like, please activate them in config/constants_ldap.php, not supported currently
-$PMF_LDAP[0]['ldap_server'] = '';
-$PMF_LDAP[0]['ldap_port'] = '';
-$PMF_LDAP[0]['ldap_user'] = '';
-$PMF_LDAP[0]['ldap_password'] = '';
-$PMF_LDAP[0]['ldap_base'] = '';
-
+// You can as much as you like, please set $PMF_LDAP['ldap_use_multiple_servers'] = true in config/constants_ldap.php
+// Start with 1
 $PMF_LDAP[1]['ldap_server'] = '';
 $PMF_LDAP[1]['ldap_port'] = '';
 $PMF_LDAP[1]['ldap_user'] = '';
 $PMF_LDAP[1]['ldap_password'] = '';
 $PMF_LDAP[1]['ldap_base'] = '';
+
+$PMF_LDAP[2]['ldap_server'] = '';
+$PMF_LDAP[2]['ldap_port'] = '';
+$PMF_LDAP[2]['ldap_user'] = '';
+$PMF_LDAP[2]['ldap_password'] = '';
+$PMF_LDAP[2]['ldap_base'] = '';
