@@ -28,12 +28,13 @@ require_once 'PHPUnit/Framework/TestSuite.php';
 require_once 'PHPUnit/TextUI/TestRunner.php';
 
 // include Testsuites
-require_once __DIR__ . DIRECTORY_SEPARATOR . 'Attachment' . DIRECTORY_SEPARATOR . 'AllTests.php';
-require_once __DIR__ . DIRECTORY_SEPARATOR . 'Category' . DIRECTORY_SEPARATOR . 'AllTests.php';
-require_once __DIR__ . DIRECTORY_SEPARATOR . 'Faq' . DIRECTORY_SEPARATOR . 'AllTests.php';
-require_once __DIR__ . DIRECTORY_SEPARATOR . 'Instance' . DIRECTORY_SEPARATOR . 'AllTests.php';
-require_once __DIR__ . DIRECTORY_SEPARATOR . 'Search' . DIRECTORY_SEPARATOR . 'AllTests.php';
-require_once __DIR__ . DIRECTORY_SEPARATOR . 'PMF_LinkTest.php';
+require_once __DIR__ . '/Attachment/AllTests.php';
+require_once __DIR__ . '/Category/AllTests.php';
+require_once __DIR__ . '/Configuration/AllTests.php';
+require_once __DIR__ . '/Faq/AllTests.php';
+require_once __DIR__ . '/Instance/AllTests.php';
+require_once __DIR__ . '/Search/AllTests.php';
+require_once __DIR__ . '/PMF_LinkTest.php';
 
 /**
  * AllTests
@@ -54,6 +55,7 @@ class AllTests
         
         $suite->addTest(Attachment_AllTests::suite());
         $suite->addTest(Category_AllTests::suite());
+        $suite->addTest(Configuration_AllTests::suite());
         $suite->addTest(Faq_AllTests::suite());
         $suite->addTest(Instance_AllTests::suite());
         $suite->addTest(Search_AllTests::suite());
