@@ -1,0 +1,46 @@
+<?php
+/**
+ * Test suite for configuration related classes
+ *
+ * PHP Version 5.4
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public License,
+ * v. 2.0. If a copy of the MPL was not distributed with this file, You can
+ * obtain one at http://mozilla.org/MPL/2.0/.
+ *
+ * @category  phpMyFAQ
+ * @package   PMF_Tests
+ * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
+ * @copyright 2013 phpMyFAQ Team
+ * @license   http://www.mozilla.org/MPL/2.0/ Mozilla Public License Version 2.0
+ * @link      http://www.phpmyfaq.de
+ * @since     2013-12-30
+ */
+
+require_once 'PHPUnit/Framework/TestSuite.php';
+require_once 'PHPUnit/TextUI/TestRunner.php';
+
+require_once 'PMF_ConfigurationTest.php';
+
+/**
+ * Configuration_AllTests
+ *
+ * @category  phpMyFAQ
+ * @package   PMF_Tests
+ * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
+ * @copyright 2013 phpMyFAQ Team
+ * @license   http://www.mozilla.org/MPL/2.0/ Mozilla Public License Version 2.0
+ * @link      http://www.phpmyfaq.de
+ * @since     2013-12-30
+ */
+class Configuration_AllTests
+{
+    public static function suite()
+    {
+        $suite = new PHPUnit_Framework_TestSuite('phpMyFAQ Configuration');
+
+        $suite->addTestSuite('PMF_ConfigurationTest');
+
+        return $suite;
+    }
+}
