@@ -7,8 +7,9 @@ This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.9.0-dev 2014-01-
 - changed PHP requirement to PHP 5.4.4 and later (Thorsten)
-- added tag intersection based search (Tomer Weinberg)
+- added tag intersection based search (Tomer Weinberg, Thorsten)
 - added configuration for enable/disable highlighting search terms (Thorsten)
+- added support for multiple LDAP/AD servers (Bernhard Müller, Thorsten)
 - added frontend dependency management using Bower (Thorsten)
 - updated bundled Symfony ClassLoader to version 2.3.7 (Thorsten)
 - updated bundled jQuery to version 1.10.2 (Thorsten)
